# certstore

./: .gitignore  LICENSE  README.md  README.rst  requirements.txt  setup.cfg
certstore/: __init__.py  certstore.py
docs/: conf.py
tests/: test_certstore.py
