[metadata]
name = certstore
author = Jon Everett
author-email = jon.everett@protonmail.com
summary = Platform independent access to OS certificate store
description-file = README.rst
home-page = https://certstore.readthedocs.io/
license = Apache-2
classifier =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    cert
    ca
[files]
packages =
    certstore
