[metadata]
name = certstore
version = 0.0.2
author = Jon Everett
author-email = jon.everett@protonmail.com
summary = Platform independent access to system certificate store
description-file = README.rst
home-page = https://certstore.readthedocs.io/
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    cert
    ca
[files]
packages =
    certstore
